--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://anderaldabaldetreku:wHqUd5EfC83oTLU2@modulobackend.kp8jc9r.mongodb.net/prisma"
+DATABASE_URL="postgres://postgres:712yhWa4@127.0.01:5432/movie_hub"
