--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres:712yhWa4@127.0.01:5432/movie_hub"
+DATABASE_URL="postgres://postgres:ander2003@192.168.0.14:5432/movie_hub"
