--- a/vercel.json
+++ b/vercel.json
@@ -1,1 +1,4 @@
-{ "version": 2, "rewrites": [{ "source": "/src", "destination": "/api" }] }
+ 
+{"version":2,
+"builds": [{"src":"src/index.ts","use": "@vercel/node"}],
+"routes":[{"src":"/(.*)","dest":"/"}]}
